--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -2,5 +2,5 @@ version: "1"
 rules:                      # Array of rules
   - base: master            # Required. Target branch
     upstream: carbon-components:master    # Required. Must be in the same fork network.
-    mergeMethod: hardreset  # Optional, one of [none, merge, squash, rebase, hardreset], Default: none.
+    mergeMethod: merge  # Optional, one of [none, merge, squash, rebase, hardreset], Default: none.
 label: ":arrow_heading_down: pull"  # Optional
